--- a/src/main/resources-debug/rest/index.vm
+++ b/src/main/resources-debug/rest/index.vm
@@ -1,1 +1,18 @@
-Welcome to StreamingPro
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello React!</title>
+    <script src="react/react.js"></script>
+    <script src="react/react-dom.js"></script>
+  </head>
+  <body>
+    <div id="body"></div>
+    <script type="text/babel">
+      ReactDOM.render(
+        <h1>Welcome to StreamingPro!</h1>,
+        document.getElementById('body')
+      );
+    </script>
+  </body>
+</html>
