--- a/streamingpro-manager/src/main/resources-local/rest/index.vm
+++ b/streamingpro-manager/src/main/resources-local/rest/index.vm
@@ -3,12 +3,58 @@
 <head>
 	<title>正在运行的Yarn进程</title>
     #parse("/rest/header.vm")
+
+    <style type="text/css">
+
+             body {
+                font-family: "Microsoft YaHei"
+             }
+             table {
+                font-family: "Microsoft YaHei"
+             }
+             button {
+                font-family: "Microsoft YaHei"
+             }
+             .table-bordered {
+                        -webkit-box-shadow: 0 1px 1px #ccc;
+                        -moz-box-shadow: 0 1px 1px #ccc;
+                        box-shadow: 0 1px 1px #ccc;
+                    }
+
+                .table-bordered th {
+                        background-color: #dce9f9;
+                        background-image: -webkit-gradient(linear, left top, left bottom, from(#ebf3fc), to(#dce9f9));
+                        background-image: -webkit-linear-gradient(top, #ebf3fc, #dce9f9);
+                        background-image: -moz-linear-gradient(top, #ebf3fc, #dce9f9);
+                        background-image: -ms-linear-gradient(top, #ebf3fc, #dce9f9);
+                        background-image: -o-linear-gradient(top, #ebf3fc, #dce9f9);
+                        background-image: linear-gradient(top, #ebf3fc, #dce9f9);
+                        filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#ebf3fc, endColorstr=#dce9f9);
+                        -ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=0, startColorstr=#ebf3fc, endColorstr=#dce9f9)";
+                    }
+                    .zebra th {
+                        background-color: #eee;
+                        background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#eee));
+                        background-image: -webkit-linear-gradient(top, #f5f5f5, #eee);
+                        background-image: -moz-linear-gradient(top, #f5f5f5, #eee);
+                        background-image: -ms-linear-gradient(top, #f5f5f5, #eee);
+                        background-image: -o-linear-gradient(top, #f5f5f5, #eee);
+                        background-image: linear-gradient(top, #f5f5f5, #eee);
+                        filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#f5f5f5, endColorstr=#eeeeee);
+                        -ms-filter: "progid:DXImageTransform.Microsoft.gradient (GradientType=0, startColorstr=#f5f5f5, endColorstr=#eeeeee)";
+                    }
+
+                    body {margin-top: 25px;filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=0, EndColorStr='#ff00ff', StartColorStr='#00ffff');}
+                    td {text-align:center}
+             </style>
+
 </head>
 <body  data-spy="scroll" data-target=".navbar">
-<div style="height:30px"></div>
+<div class="container">
+<h2>Spark 任务管理</h2>
+</div>
 <div class="container">
 
-    <a href="/app/listSparkFailLog.html">失败应用查看</a>
 	<table class="table  table-striped table-bordered table-hover " id = "showTable">
 
 		<thead>
@@ -29,10 +75,10 @@
         #foreach( $c in $result )
 			<tr>
 				<td>-</td>
-                <td><a href="http://${c.url}/cluster/app/${c.app.applicationId}">${c.app.applicationId}</a></td>
+                <td><a href="http://${c.app.url}/cluster/app/${c.app.applicationId}">${c.app.applicationId}</a></td>
                 <td>
                 #if($null.isNull($c.app.parentApplicationId))
-                <a href="http://${c.yarnUrl}/cluster/app/${c.app.parentApplicationId}">${c.app.parentApplicationId}
+                <a href="http://${c.app.url}/cluster/app/${c.app.parentApplicationId}">${c.app.parentApplicationId}
                 #end
                 </a>
                 </td>
