--- a/streamingpro-manager/src/main/resources-local/rest/menu.vm
+++ b/streamingpro-manager/src/main/resources-local/rest/menu.vm
@@ -1,27 +1,40 @@
-<div class="container">
-<div class="navbar">
-  <div class="navbar-inner">
+<nav class="navbar navbar-default" role="navigation">
     <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <div class="nav-collapse">
-        <ul class="nav">
-          <li><a href="/jobs.html" class="">Spark任务管理</a></li>
-        </ul>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-brand-centered">
+                <span class="sr-only">菜单</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <!--<div class="navbar-brand navbar-brand-centered">Brand</div>-->
+        </div>
 
-        <ul class="nav">
-             <li><a href="/submit_job_index.html">提交Spark任务</a></li>
-        </ul>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-brand-centered">
+            <ul class="nav navbar-nav">
+                #foreach($item in $nav)
+                <li>$item</li>
+                #end
+            </ul>
+            <!--<ul class="nav navbar-nav navbar-right">-->
+            <!--<li><a href="#">Link</a></li>-->
+            <!--<li><a href="#">Link</a></li>-->
+            <!--<li class="dropdown">-->
+            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>-->
+            <!--<ul class="dropdown-menu" role="menu">-->
+            <!--<li><a href="#">Action</a></li>-->
+            <!--<li><a href="#">Another action</a></li>-->
+            <!--<li><a href="#">Something else here</a></li>-->
+            <!--<li class="divider"></li>-->
+            <!--<li><a href="#">Separated link</a></li>-->
+            <!--<li class="divider"></li>-->
+            <!--<li><a href="#">One more separated link</a></li>-->
+            <!--</ul>-->
+            <!--</li>-->
+            <!--</ul>-->
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
 
-        <ul class="nav">
-<li><a href="/upload.html">上传Jar包</a></li>
-                </ul>
-
-      </div><!-- /.nav-collapse -->
-    </div>
-  </div><!-- /navbar-inner -->
-</div>
-</div>
