--- a/streamingpro-manager/src/main/resources-local/rest/jobs.vm
+++ b/streamingpro-manager/src/main/resources-local/rest/jobs.vm
@@ -3,13 +3,14 @@
 <head>
     <title>任务管理</title>
     #parse("/rest/header.vm")
+    <script src="/vue.js"></script>
+    <script src="/axios.min.js"></script>
 </head>
 <body>
 <div class="container">
     #parse("/rest/menu.vm")
 </div>
-<div class="container">
-
+<div class="container" id="app">
     <table class="table  table-striped table-bordered table-hover " id="showTable">
 
         <thead>
@@ -17,7 +18,8 @@
             <th>序号</th>
             <th>应用号</th>
             <th>父应用号(失败)</th>
-            <th>应用</th>
+            <th>应用<input type="text" class="search" placeholder="查找" v-on:keyup.enter="filter_app_name"
+                         v-model="search_value"></th>
             <th>运行状态</th>
             <th>启动</th>
             <th>监控</th>
@@ -39,5 +41,19 @@
 
     </table>
 </div>
+<script type="application/javascript">
+        new Vue({
+          el: '#app',
+          data: {
+            search_value: ''
+          },
+          methods: {
+                filter_app_name: function (event) {
+                    window.location= '/jobs.html?search='+this.search_value
+                }
+              }
+        })
+
+</script>
 </body>
 </html>
