chage config file to db

--- a/streamingpro-manager/src/main/resources-local/rest/header.vm
+++ b/streamingpro-manager/src/main/resources-local/rest/header.vm
@@ -12,6 +12,8 @@
 <link rel="stylesheet" href="/font-awesome.min.css">
 <script src="/jquery-1.11.0.min.js"></script>
 <script src="/bootstrap.min.js"></script>
+<script src="/vue.js"></script>
+<script src="/axios.min.js"></script>
 
 <style type="text/css">
 
